# 42-CURSUS

Amazing/: Makefile  README.md  a_maze_ing.py  config.txt  input_validator.py  maze.txt  maze_generator.py  print_maze.py  requirements.txt
Amazing/mazegen/: README.md  mazegen.py  pyproject.toml
FLY-IN/: Makefile  README.md  fly_in.py  requirements.txt  test.txt
FLY-IN/src/: drone.py  input_validation.py  network_graph.py  pathfinding.py  simulation_manager.py  visual_representation.py
Piscine Reloaded/ex00/: exo.tar
Piscine Reloaded/ex04/: MAC.sh
Piscine Reloaded/ex06/: ft_print_alphabet.c
Piscine Reloaded/ex07/: ft_print_numbers.c
Python Modules/Python08/ex01/: loading.py  pyproject.toml  requirements.txt
ft_printf/: Makefile  README.md  ft_print_pointer.c  ft_printf.c  ft_printf.h  ft_printf_numbers.c  ft_printf_util.c
get_next_line/: README.md  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
libft/: Makefile  README.md  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  (+6 more)
(+106 files in other folders)
